<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttivitaFormActivity">


    <EditText
        android:id="@+id/editTextTitolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/titolo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescrizione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/descrizione"
        android:inputType="textMultiLine"
        android:lines="4"
        app:layout_constraintEnd_toEndOf="@+id/editTextTitolo"
        app:layout_constraintStart_toStartOf="@+id/editTextTitolo"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitolo" />

    <DatePicker
        android:id="@+id/editTextData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescrizione"
        app:layout_constraintStart_toStartOf="@+id/editTextDescrizione"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescrizione" />




    <Spinner
        android:id="@+id/spinnerUtente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextData"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="@+id/editTextData"
        app:layout_constraintTop_toBottomOf="@+id/editTextData" />

    <Button
        android:id="@+id/bottone_salva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salva"
        android:onClick="salvaAttivita"
        android:layout_marginBottom="@dimen/distanza_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>